--- a/src/css/_typography.styl
+++ b/src/css/_typography.styl
@@ -18,7 +18,9 @@ h1
 
 h2,h3,h4,h5,h6
   font-weight normal
-  font-family 'haymakerregular', sans-serif
+  font-family 'Merienda', cursive
+  font-weight bolder
+  text-transform uppercase
 
 h2
   text-align center
