--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,19 +24,16 @@
   padding: 0;
 }
 .count-enter {
-  background: #f00;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
 }
 .count-enter.count-enter-active {
-  background: #ff0;
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
 .count-exit {
-  background: #000;
   -webkit-transform: translateY(0);
           transform: translateY(0);
   -webkit-transition: 0.5s;
@@ -46,9 +43,8 @@
   bottom: 0;
 }
 .count-exit.count-exit-active {
-  background: #008000;
-  -webkit-transform: translateY(-100%) scale(3);
-          transform: translateY(-100%) scale(3);
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
 }
 @font-face {
   font-family: "haymakerregular";
@@ -249,7 +245,9 @@ h4,
 h5,
 h6 {
   font-weight: normal;
-  font-family: 'haymakerregular', sans-serif;
+  font-family: 'Merienda', cursive;
+  font-weight: bolder;
+  text-transform: uppercase;
 }
 h2 {
   text-align: center;
@@ -259,11 +257,13 @@ h2 {
 h3 {
   font-size: 3rem;
 }
+@import url("https://fonts.googleapis.com/css?family=Merienda");
 header.top {
   text-align: center;
 }
 header.top h1 {
-  font-size: 14.4rem;
+  font-size: 9rem;
+  font-family: 'Merienda', cursive;
   line-height: 0.7;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -271,6 +271,23 @@ header.top h1 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-bottom: 2%;
+}
+header.top h1 span .seafood:first-child {
+  -webkit-transform: scaleX(1.5);
+          transform: scaleX(1.5);
+}
+header.top h1 span .seafood {
+  display: block;
+  font-size: 5.5rem;
+  line-height: 0.9;
+}
+header.top h1 .theStore {
+  font-size: 7rem;
+  letter-spacing: -5px;
+  padding-top: 4.5%;
+  -webkit-transform: scaleY(1.4);
+          transform: scaleY(1.4);
 }
 header.top h1 .ofThe {
   display: -webkit-box;
@@ -278,6 +295,7 @@ header.top h1 .ofThe {
   display: flex;
   font-size: 3rem;
   color: #f5a623;
+  width: 17%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -287,11 +305,6 @@ header.top h1 .ofThe {
   background: url("images/anchor.svg") center no-repeat;
   background-size: cover;
   padding: 0 1rem;
-}
-header.top h1 .ofThe .of {
-  padding-right: 2rem;
-  position: relative;
-  right: -0.5rem;
 }
 header.top h3 {
   margin: 0;
@@ -327,10 +340,8 @@ header.top h3:after {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 90vh;
-  max-width: 1500px;
+  height: 100vh;
   margin: 0 auto;
-  margin-top: 5vh;
   -webkit-perspective: 1000px;
           perspective: 1000px;
   -webkit-transform-style: preserve-3d;
@@ -341,7 +352,6 @@ header.top h3:after {
       -ms-flex: 1 4 auto;
           flex: 1 4 auto;
   padding: 2rem;
-  border: 1rem double #1a1a1a;
   position: relative;
   background: #fff;
   -webkit-transition: all 0.3s;
@@ -361,9 +371,7 @@ header.top h3:after {
 .catch-of-the-day > *:nth-child(2) {
   -webkit-transform: translateX(-50%) rotateY(-14deg) translateX(50%);
           transform: translateX(-50%) rotateY(-14deg) translateX(50%);
-  border-left: 0;
-  border-right: 0;
-  min-width: 300px;
+  min-width: 22%;
 }
 .catch-of-the-day > *:last-child {
   -ms-flex-negative: 1;
@@ -448,8 +456,8 @@ ul.order li span.count span {
   text-align: center;
 }
 .fish-edit {
-  margin-bottom: 20px;
-  border: 2px solid #000;
+  margin: 20px 0 10px;
+  border: 1px solid #000;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -498,7 +506,6 @@ ul.order li span.count span {
           transform: translateZ(0);
 }
 .menu-fish {
-  border-bottom: 2px solid #000;
   border-top: 1px solid #000;
   padding-bottom: 2rem;
   padding-top: 2rem;
@@ -613,11 +620,11 @@ input[type=submit].twitter {
 }
 button.github,
 input[type=submit].github {
-  background: #82d465;
+  background: #24292e;
 }
 button.github:after,
 input[type=submit].github:after {
-  background: #5cc437;
+  background: #1d2125;
 }
 button.facebook,
 input[type=submit].facebook {
