--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -19,12 +19,34 @@ header.top
         display block
         font-size 5.5rem
         line-height .9
+    @media screen and (max-width: 1300px)
+      .seafood
+        font-size 4rem !important
+    @media screen and (max-width: 1000px)
+      .seafood
+        font-size 5rem !important
+    @media screen and (max-width: 700px)
+      .seafood
+        font-size 3.5rem !important
+    @media screen and (max-width: 500px)
+      .seafood
+        font-size 2.5rem !important
+
     .theStore
       font-size 7rem
       letter-spacing -5px
       padding-top 4.5%
       transform scaleY(1.4)
-
+      @media screen and (max-width: 1300px)
+        font-size 5rem !important
+      @media screen and (max-width: 1000px)
+        font-size 7rem !important
+        padding-top 2.5%
+      @media screen and (max-width: 700px)
+        font-size 4.5rem !important
+        padding-top 3%
+      @media screen and (max-width: 500px)
+        font-size 3.5rem !important
     // This is a bunch of goofy CSS to make the logo look decent
     .ofThe
       display flex
@@ -36,6 +58,9 @@ header.top
       background url('images/anchor.svg') center no-repeat;
       background-size cover
       padding 0 1rem
+      @media screen and (max-width: 1000px)
+        width 14% !important
+
 
   h3
     margin 0
@@ -70,6 +95,10 @@ header.top
   margin 0 auto
   perspective: 1000px;
   transform-style preserve-3d
+  @media screen and (max-width: 1000px)
+    flex-wrap wrap
+    & > *
+      width 100%
   & > *
     flex 1 4 auto
     padding 2rem
@@ -204,6 +233,8 @@ ul.order
   p
     margin 0
     font-size 1.8rem
+    @media screen and (max-width: 1300px)
+      font-size 1.4rem !important
   .fish-name
     margin 0
     display flex
@@ -218,6 +249,8 @@ ul.order
     float left
     width 150px
     margin-right 1rem
+    @media screen and (max-width: 1300px)
+      width 120px
 
 button, input[type=submit]
   text-transform uppercase
